# TiledCppSamples

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
advanced_wars_sample/: CMakeLists.txt  main.cpp
advanced_wars_sample/game/: cursor.cpp  cursor_old.hpp  game_bindings.hpp  level.cpp  level.hpp  text.hpp  tileset_data.cpp  unit.cpp  unit.hpp  widget_helpers.hpp
assets/maps/: FinalMap.tmx  GoalMap.tmx  Goblin.tsx  OverworldTiles.tsx  RiverTiles.tsx  Soldier.tsx  Soldier2.tsx  Spearman.tsx  Tiles_Fantasy_minimap_32x32.tsx
tactical_wars_sample/: CMakeLists.txt  main.cpp
tactical_wars_sample/game/: cursor.cpp  cursor.hpp  game_bindings.hpp  level.cpp  level.hpp  text.cpp  text.hpp  tileset_data.hpp  ui.cpp  ui.hpp  unit.cpp  unit.hpp
